--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
   intl: ^0.17.0
+  week_of_year: ^2.0.0
 
 dev_dependencies:
   flutter_test:
